Add Meditation Dashboard

--- a/dashboards/overview.erb
+++ b/dashboards/overview.erb
@@ -16,5 +16,10 @@
       <i class="icon-twitter icon-background" style="font-size: 200px;"></i>
     </li>
 
+    <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
+      <div data-id="meditation_link" style="background-color:#f47d31;" data-view="Text" data-text="Meditation Dashboard" data-link="/meditation"></div>
+      <i class="icon-heart icon-background" style="font-size: 200px;"></i>
+    </li>
+
   </ul>
 </div>
