--- a/dashboards/books.erb
+++ b/dashboards/books.erb
@@ -2,7 +2,7 @@
 <div class="gridster">
   <ul>
     <li data-row="1" data-col="1" data-sizex="2" data-sizey="1">
-      <div data-id="good_reads_recent_books" style="background-color:#743901;" data-view="GoodReads" data-title="Recently read books"></div>
+      <div data-id="good_reads_recent_books" style="background-color:#743901;" data-view="ImageList" data-title="Recently read books"></div>
     </li>
   </ul>
 </div>
