Clean up code, dont show nav options if not configured

--- a/dashboards/overview.erb
+++ b/dashboards/overview.erb
@@ -1,25 +1,33 @@
 <% content_for :title do %>Overview<% end %>
 <div class="gridster">
   <ul>
-    <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
-      <div data-id="music_link" style="background-color:#81b71a;" data-view="Text" data-text="Music Dashboard" data-link="/music"></div>
-      <i class="icon-music icon-background" style="font-size: 200px;"></i>
-    </li>
+    <% if LastFMJob.should_run? %>
+      <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
+        <div data-id="music_link" style="background-color:#81b71a;" data-view="Text" data-text="Music Dashboard" data-link="/music"></div>
+        <i class="icon-music icon-background" style="font-size: 200px;"></i>
+      </li>
+    <% end %>
 
-    <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
-      <div data-id="books_link" style="background-color:#743901;" data-view="Text" data-text="Book Dashboard" data-link="/books"></div>
-      <i class="icon-book icon-background" style="font-size: 200px;"></i>
-    </li>
+    <% if GoodReadsJob.should_run? %>
+      <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
+        <div data-id="books_link" style="background-color:#743901;" data-view="Text" data-text="Book Dashboard" data-link="/books"></div>
+        <i class="icon-book icon-background" style="font-size: 200px;"></i>
+      </li>
+    <% end %>
 
-    <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
-      <div data-id="music_link" style="background-color:#00ACED;" data-view="Text" data-text="Social Media Dashboard" data-link="/social_media"></div>
-      <i class="icon-twitter icon-background" style="font-size: 200px;"></i>
-    </li>
+    <% if TwitterJob.should_run? %>
+      <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
+        <div data-id="music_link" style="background-color:#00ACED;" data-view="Text" data-text="Social Media Dashboard" data-link="/social_media"></div>
+        <i class="icon-twitter icon-background" style="font-size: 200px;"></i>
+      </li>
+    <% end %>
 
-    <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
-      <div data-id="meditation_link" style="background-color:#f47d31;" data-view="Text" data-text="Meditation Dashboard" data-link="/meditation"></div>
-      <i class="icon-heart icon-background" style="font-size: 200px;"></i>
-    </li>
+    <% if HeadspaceJob.should_run? %>
+      <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
+        <div data-id="meditation_link" style="background-color:#f47d31;" data-view="Text" data-text="Meditation Dashboard" data-link="/meditation"></div>
+        <i class="icon-heart icon-background" style="font-size: 200px;"></i>
+      </li>
+    <% end %>
 
   </ul>
 </div>
