--- a/dashboards/json/books.json.erb
+++ b/dashboards/json/books.json.erb
@@ -1,3 +1,6 @@
-[
-  <%= render_json("ImageList", "good_reads_recent_books") %>
-]
+{ 
+  "id" : "books",
+  "widgets" : [
+    <%= render_json("ImageList", "good_reads_recent_books") %>
+  ]
+}
