--- a/dashboards/overview.erb
+++ b/dashboards/overview.erb
@@ -3,28 +3,28 @@
   <ul>
     <% if LastFMJob.should_run? %>
       <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
-        <div data-id="music_link" style="background-color:#81b71a;" data-view="Text" data-text="Music Dashboard" data-link="/music"></div>
+        <div data-id="music_link" style="background-color:#81b71a;" data-view="Text" data-text="Music" data-link="/music"></div>
         <i class="icon-music icon-background" style="font-size: 200px;"></i>
       </li>
     <% end %>
 
     <% if GoodReadsJob.should_run? %>
       <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
-        <div data-id="books_link" style="background-color:#743901;" data-view="Text" data-text="Book Dashboard" data-link="/books"></div>
+        <div data-id="books_link" style="background-color:#743901;" data-view="Text" data-text="Book" data-link="/books"></div>
         <i class="icon-book icon-background" style="font-size: 200px;"></i>
       </li>
     <% end %>
 
     <% if TwitterJob.should_run? %>
       <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
-        <div data-id="music_link" style="background-color:#00ACED;" data-view="Text" data-text="Social Media Dashboard" data-link="/social_media"></div>
+        <div data-id="music_link" style="background-color:#00ACED;" data-view="Text" data-text="Social Media" data-link="/social_media"></div>
         <i class="icon-twitter icon-background" style="font-size: 200px;"></i>
       </li>
     <% end %>
 
     <% if HeadspaceJob.should_run? %>
       <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
-        <div data-id="meditation_link" style="background-color:#f47d31;" data-view="Text" data-text="Meditation Dashboard" data-link="/meditation"></div>
+        <div data-id="meditation_link" style="background-color:#f47d31;" data-view="Text" data-text="Meditation" data-link="/meditation"></div>
         <i class="icon-heart icon-background" style="font-size: 200px;"></i>
       </li>
     <% end %>
