--- a/dashboards/overview.erb
+++ b/dashboards/overview.erb
@@ -10,7 +10,7 @@
 
     <% if GoodReadsJob.should_run? %>
       <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
-        <div data-id="books_link" style="background-color:#743901;" data-view="Text" data-text="Book" data-link="/books"></div>
+        <div data-id="books_link" style="background-color:#743901;" data-view="Text" data-text="Literature and Education" data-link="/literature-education"></div>
         <i class="icon-book icon-background" style="font-size: 200px;"></i>
       </li>
     <% end %>
