--- a/dashboards/literature-education.erb
+++ b/dashboards/literature-education.erb
@@ -1,4 +1,4 @@
-<% content_for :title do %>Books<% end %>
+<% content_for :title do %>Literature and Education<% end %>
 <div class="gridster">
   <ul>
     <li data-row="1" data-col="1" data-sizex="2" data-sizey="1">
